--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Jonat\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+user.properties.file=C:\\Users\\henry\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
